Correct spacing

--- a/server/public/global.scss
+++ b/server/public/global.scss
@@ -70,3 +70,7 @@ object.logo {
         padding-top: 0px;
     }
 }
+
+.widget {
+    margin-top: 20px;
+}
